save last changes

--- a/index.html
+++ b/index.html
@@ -15,16 +15,37 @@
       <article class="header__menu">
         <ul class="header__links-list">
           <li>
-            <div class="header__links-list-item_no-bullit">главная</div>
+            <div class="header__links-list-item_no-bullit header__link">
+              главная
+            </div>
           </li>
           <li>
-            <div class="header__links-list-item">посмотреть лоты</div>
+            <div class="header__links-list-item header__link_active">
+              посмотреть лоты
+            </div>
           </li>
           <li>
-            <div class="header__links-list-item">об аукционе</div>
+            <div class="header__links-list-item header__link_active">
+              об аукционе
+            </div>
           </li>
         </ul>
       </article>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Надпись Оно тебе тебе надо"
+        />
+      </a>
+      <adress class="adress">
+        <a href="tel:+70000000">+9 999 555 55 55<br></a>
+        <a href="mailto:mail@example.com">info@sobaka.ge</a>
+        <div class="header__adress">
+          наб. Принсенграхт 263-<br />
+          265, Амстердам
+        </div>
+      </adress>
     </header>
     <main>
       <section class="cover">
