--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Innokentii Ermakov" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="/fonts/fonts.css" />
     <link rel="stylesheet" href="styles/global.css" />
@@ -14,32 +13,22 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li>
-            <div class="header__links-list-item_no-bullit header__link">
-              главная
-            </div>
+          <li class="header__links-list-item_no-bullit header__link_active">
+            главная
           </li>
-          <li>
-            <div class="header__links-list-item header__link_active">
-              посмотреть лоты
-            </div>
-          </li>
-          <li>
-            <div class="header__links-list-item header__link_active">
-              об аукционе
-            </div>
-          </li>
+          <li class="header__links-list-item header__link see__lots">посмотреть лоты</li>
+          <li class="header__links-list-item header__link about__auction">об аукционе</li>
         </ul>
       </nav>
       <a class="header__logo">
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="Надпись Оно тебе тебе надо"
+          alt="Логотип оно тебе тебе надо"
         />
       </a>
       <address class="address">
-        <a href="tel:+70000000">+9 999 555 55 55<br /></a>
+        <a href="tel:+70000000">+9 999 555 5555</a>
         <a href="mailto:mail@example.com">info@sobaka.ge</a>
         <div class="header__address">
           наб. Принсенграхт 263-<br />
@@ -124,7 +113,7 @@
       <section class="about">
         <div class="about__column">
           <div class="about__logo">
-            <img class="about__logo-image">
+            <img class="about__logo-image" />
           </div>
         </div>
         <div class="about__column">
@@ -175,8 +164,6 @@
           </li>
         </ul>
       </nav> -->
-
-
     </footer>
   </body>
 </html>
