--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit header__link_active">
-            главная
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link_active"> главная </a>
           </li>
-          <li class="header__links-list-item header__link see__lots">посмотреть лоты</li>
-          <li class="header__links-list-item header__link about__auction">об аукционе</li>
+          <li class="header__links-list-item">
+            <a class="header__link see__lots" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link about__auction" href="#0">об аукционе </a>
+          </li>
         </ul>
       </nav>
       <a class="header__logo">
@@ -40,23 +44,24 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">ОН</span>
-          <span class="aligned-text letter-spacing-extended">О</span>
-          <span class="aligned-text_center">ТЕБ</span>
-          <span class="aligned-text_center letter-spacing-extended">E</span>
-          <span class="aligned-text_right letter-spacing-extended">Н</span>
-          <span class="aligned-text_right">АД</span>
-          <span class="aligned-text_right no-letter-spacing">О</span>
+          <span class="aligned-text">О<span class="letter-spacing-extended">НО</span></span
+          >
+          <span class="aligned-text aligned-text_center"
+            >ТЕ<span class="letter-spacing-extended"
+              >БE</span
+            ></span>
+          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">
+            Н</span>АД<span class="no-letter-spacing">О</span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
-            Аукцион вещей в которые никто не верил
-          </p>
-          <button class="bet button">Сделать ставку</button>
+            Аукцион вещей, в которые никто не верил
+            </p>
+          <button class="bet__button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
-        <h2 class="lots__heading">Лоты</h2>
+        <h3 class="lots__heading">Лоты</h3>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
@@ -75,7 +80,7 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card_type_book">
+              <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -93,7 +98,7 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card_type_picture">
+              <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
