css  comments closure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-
   <body>
     <header class="header">
       <nav class="header__menu">
@@ -52,11 +51,10 @@
             >те<span class="letter-spacing-extended">бе</span></span
           >
           <span class="aligned-text aligned-text_right"
-            ><span class="letter-spacing-extended"> н</span>ад<span
+            ><span class="letter-spacing-extended">н</span>а<span
               class="no-letter-spacing"
-              >о</span
-            ></span
-          >
+              >д</span><span>о</span> 
+          <!-- Никита, спасибо за комментарии и ревью, можете подсказать какой самый оптимальный путь выравнивниваия буквы О? Чтобы я не делал, у меня съезжают все остальные эллементы -->
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -174,17 +172,17 @@
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img src="./images/yt.svg" alt="Логотип Youtube" />
+              <img src="./images/yt.svg" target="_blank" alt="Логотип Youtube" />
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img src="./images/vk.svg" alt="Логотип VK" />
+              <img src="./images/vk.svg" target="_blank" alt="Логотип VK" />
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img src="./images/pinterest.svg" alt="Логотип Pinterest" />
+              <img src="./images/pinterest.svg" target="_blank" alt="Логотип Pinterest" />
             </a>
           </li>
         </ul>
