--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <span class="aligned-text aligned-text_right"
             ><span class="letter-spacing-extended">н</span>а<span
               class="no-letter-spacing"
-              >д</span><span>о</span> 
+              >д</span>о</span> 
           <!-- Никита, спасибо за комментарии и ревью, можете подсказать какой самый оптимальный путь выравнивниваия буквы О? Чтобы я не делал, у меня съезжают все остальные эллементы -->
         </h1>
         <div class="cover__description">
@@ -171,18 +171,18 @@
       <nav>
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img src="./images/yt.svg" target="_blank" alt="Логотип Youtube" />
+            <a class="footer__social-link" target="_blank" href="#0">
+              <img src="./images/yt.svg" alt="Логотип Youtube" />
             </a>
           </li>
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img src="./images/vk.svg" target="_blank" alt="Логотип VK" />
+            <a class="footer__social-link" target="_blank"  href="#0">
+              <img src="./images/vk.svg" alt="Логотип VK" />
             </a>
           </li>
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img src="./images/pinterest.svg" target="_blank" alt="Логотип Pinterest" />
+            <a class="footer__social-link" target="_blank" href="#0">
+              <img src="./images/pinterest.svg" alt="Логотип Pinterest" />
             </a>
           </li>
         </ul>
