--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    
   </head>
   <body>
     <header class="header">
@@ -45,9 +44,18 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text aligned-text_left">О<span class="letter-spacing-extended">н</span>о</span>
-          <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">б</span>е</span>
-          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>        
+          <span class="aligned-text aligned-text_left"
+            >О<span class="letter-spacing-extended">н</span>о</span
+          >
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">б</span>е</span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
+          >
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -169,7 +177,7 @@
             </a>
           </li>
           <li class="footer__social-list-item">
-            <a class="footer__social-link" target="_blank"  href="#0">
+            <a class="footer__social-link" target="_blank" href="#0">
               <img src="./images/vk.svg" alt="Логотип VK" />
             </a>
           </li>
